<resources>
    <string name="app_name">MyCapello</string>

    <string name="signin_capello">Sign in to your Capello Experience Account</string>

        <string name="app_name1">Academic Planner</string>

        <string name="login_with">Login With</string>
        <string name="email_addr">Email Address</string>
        <string name="password">Password</string>
        <string name="forgot_password">Forgot Password</string>
        <string name="login">LOGIN</string>
        <string name="signup">SIGN UP</string>
        <string name="display_name">Display Name</string>
        <string name="register_button">REGISTER</string>

    <string name="sign_in_textview">Sign In to your Account for Ease of Access</string>
    <string name="signin_text">Sigh In</string>
    <string name="signup_textview">Create a Capello Experience Account for Free</string>
    <string name="action_settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="privacy">Privacy Policy</string>
    <string name="sign_up">Sign Up</string>
    <string name="Guest_textview">Just Trying yhe App??? Be our Guest!!</string>
    <string name="enter_guest">Enter as Guest</string>
    <string name="user_id">Enter User Id</string>
    <string name="enter_password">Enter Password</string>
    <string name="stay_signedin_text">Stay Signed In !!</string>
    <string name="back_btn">BACK</string>
    <string name="mycapello">MyCapello</string>
    <string name="signup_activity">Sign Up for a Capello Experience Account</string>
    <string name="subtext_signup">Available benefits are like Booking Appointments, get notified about our current offers, Package Deals, Upcoming Events and Much More</string>
    <string name="firstname">Enter your FirstName</string>
</resources>
