<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_weight=".95">

    <com.github.siyamed.shapeimageview.CircularImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/picture_icon"
        android:layout_gravity="center_horizontal"
        app:siBorderWidth="6dp"
        app:siBorderColor="#00BCD4" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@drawable/round_edittext"
            android:hint="@string/display_name"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@drawable/round_edittext"
            android:hint="@string/email_addr"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@drawable/round_edittext"
            android:hint="@string/password"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".05">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_edge_btn"
            android:text="@string/register_button"
            android:id="@+id/register_btn"/>

    </LinearLayout>


</LinearLayout>